chore: prep for npm

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "nuxt-content-narrator",
+  "version": "0.0.1",
   "private": true,
   "type": "module",
+  "main": "./nuxt.config.ts",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -9,16 +11,15 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "@nuxt/content": "3.3.0",
     "@nuxt/eslint": "1.2.0",
     "@vueuse/nuxt": "^13.0.0",
+    "elevenlabs": "^1.54.0",
+    "eslint": "^9.0.0",
     "nuxt": "^3.16.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "elevenlabs": "^1.54.0"
-  },
-  "devDependencies": {
-    "eslint": "^9.0.0"
+    "vue-router": "^4.5.0"
   }
 }
