--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@vueuse/nuxt": "^13.0.0",
+    "elevenlabs": "^1.54.0"
+  },
   "devDependencies": {
     "@nuxt/content": "3.3.0",
     "@nuxt/eslint": "1.2.0",
-    "@vueuse/nuxt": "^13.0.0",
-    "elevenlabs": "^1.54.0",
     "eslint": "^9.0.0",
     "nuxt": "^3.16.0",
     "vue": "^3.5.13",
